Fix toggle menu on mobile #92

--- a/static/map/Osmose.Menu.css
+++ b/static/map/Osmose.Menu.css
@@ -143,6 +143,7 @@ div.level-3.disabled {
     width: 26px;
     top: 5px;
     left: 5px;
+    z-index: 2;
   }
 }
 
